Last header not showing fix + some more design fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -720,6 +720,7 @@ body {
   /* padding: 80px; */
   gap: 36px;
   position: relative;
+  z-index: -1;
  }
 
  .dark-mode .sixth-section {
@@ -736,9 +737,10 @@ body {
   width: 1280px;
   height: 99px;
   gap: 8px;
-  opacity: 0px;
   margin-bottom: 5%;
   padding: 80px;
+  z-index: 1;
+  position: relative;
 }
 
 .team-title .small-text {
